# ethers-rs

./: Cargo.toml
ethers-addressbook/: Cargo.toml
ethers-contract/: Cargo.toml
ethers-contract/ethers-contract-abigen/: Cargo.toml
ethers-core/: Cargo.toml
ethers-core/ethers-derive-eip712/: Cargo.toml
ethers-core/src/macros/: ethers_crate.rs
ethers-etherscan/: Cargo.toml
ethers-middleware/: Cargo.toml
ethers-providers/: Cargo.toml
ethers-signers/: Cargo.toml
ethers-signers/src/aws/: mod.rs
ethers-signers/src/ledger/: app.rs
ethers-signers/src/trezor/: app.rs
ethers-signers/src/wallet/: mnemonic.rs  private_key.rs  yubi.rs
ethers-solc/: Cargo.toml
src/: lib.rs
