[package]
name = "ethers-contract"
license = "MIT OR Apache-2.0"
version = "0.13.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"
description = "Smart contract bindings for the ethers-rs crate"
homepage = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
keywords = ["ethereum", "web3", "celo", "ethers"]

[dependencies]
ethers-providers = { version = "^0.13.0", path = "../ethers-providers", default-features = false }
ethers-core = { version = "^0.13.0", path = "../ethers-core", default-features = false }
ethers-contract-abigen = { version = "^0.13.0", path = "ethers-contract-abigen" }
ethers-contract-derive = { version = "^0.13.0", path = "ethers-contract-derive" }
ethers-derive-eip712 = { version = "^0.13.0", path = "../ethers-core/ethers-derive-eip712" }

serde = { version = "1.0.136", default-features = false }
serde_json = { version = "1.0.64", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
once_cell = { version = "1.8.0" }
pin-project = {version = "1.0.7", default-features = false }
futures-util = { version = "^0.3" }
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[features]
eip712 = ["ethers-core/eip712"]
celo = ["legacy", "ethers-core/celo", "ethers-core/celo", "ethers-providers/celo"]
legacy = []

rustls = ["ethers-contract-abigen/rustls"]
openssl = ["ethers-contract-abigen/openssl"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
